--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Jeevan Jayasuriya"
+  linkedin         : Jeevan Jayasuriya
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
