--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : Jeevan Jayasuriya
+  linkedin         : "https://www.linkedin.com/in/jeevanjayasuriya/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
