--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,23 +16,23 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Teaching and Mentorship"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Activities"
     url: /teaching/ 
 
-  - title: "Portfolio"
-    url: /portfolio/
+  #- title: "Portfolio"
+    #url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+ #- title: "Blog Posts"
+    #url: /year-archive/
 
   - title: "CV"
     url: /files/Jeevan_Jayasuriya_Resume.pdf
 
-  - title: "Awards"
-    url: /awards/
+  #- title: "Awards"
+   # url: /awards/
     
   # - title: "CV"
   #   url: /cv-json/
