--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Teaching and Mentorship"
+  - title: "Teaching"
     url: /teaching/  
 
   - title: "Activities"
