--- a/_config.yml
+++ b/_config.yml
@@ -285,9 +285,9 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: talks
+      type: activities
     values:
-      layout: talk
+      layout: activities
       author_profile: true
       share: true
 
