--- a/_config.yml
+++ b/_config.yml
@@ -230,7 +230,7 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+  activities:
     output: true
     permalink: /:collection/:path/
 
