--- a/_config.yml
+++ b/_config.yml
@@ -233,6 +233,9 @@ collections:
   activities:
     output: true
     permalink: /:collection/:path/
+  research:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -282,10 +285,18 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
+  # _activities
   - scope:
       path: ""
       type: activities
+    values:
+      layout: single
+      author_profile: true
+      share: true
+ # _research
+  - scope:
+      path: ""
+      type: research
     values:
       layout: single
       author_profile: true
