--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "Jeevan-Jayasuriya.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile1.png"
+  avatar           : "profile2.jpg"
   name             : "Jeevan Jayasuriya"
   pronouns         : "He/him"
   bio              : "PhD Student | Graduate Researcher"
